Correcting test targets on snappy-spark
 * separate scala and junit test targets
 * adding bunch of settings required by spark tests
 * updating scalatest plugin to allow setting environment variables
 * making test outputs etc uniform with snappy-commons

Now ./gradlew product snappy-spark:core:check and such pass (except for few failures related to our executor local routing changes that need to be corrected)